<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:background="#FFF" android:id="@id/tableLayout"
             android:focusable="true" android:padding="5dp" android:stretchColumns="1,2,3">

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@id/tableRow0">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/bill_total"
                android:id="@id/billTotalTextView" android:textColor="#ff000000" android:gravity="right"
                android:paddingRight="5dp"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/billTotalEditText" android:text="@string/zero" android:textColor="#ff000000"
                android:layout_span="3" android:inputType="numberDecimal" android:layout_weight="1"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@id/tableRow1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ten_percent"
                android:id="@+id/tenTextView" android:textColor="@android:color/black"
                android:layout_column="1" android:gravity="center" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fifteen_percent"
                android:id="@+id/fifteenTextView" android:textColor="@android:color/black"
                android:layout_column="2" android:gravity="center" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/twenty_percent"
                android:id="@+id/twentyTextView" android:textColor="@android:color/black"
                android:layout_column="3" android:gravity="center" android:layout_weight="1"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@id/tableRow2">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tip"
                android:id="@+id/TipTextView" android:textColor="@android:color/black" android:gravity="right"
                android:paddingRight="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip10EditText" android:textColor="#ff000000" android:text="@string/zero"
                android:gravity="center" android:textSize="14sp" android:focusable="false"
                android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip15EditText" android:textColor="#ff000000"
                android:text="@string/zero" android:gravity="center" android:textSize="14sp" android:focusable="false"
                android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip20EditText" android:textColor="#ff000000" android:text="@string/zero"
                android:gravity="center" android:textSize="14sp" android:focusable="false"
                android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@id/tableRow3">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/total"
                android:id="@+id/totalTextView" android:textColor="#ff000000" android:gravity="right"
                android:paddingRight="5dp"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/total10Edit" android:textColor="#ff000000" android:text="@string/zero"
                  android:gravity="center" android:textSize="14sp" android:focusable="false" android:cursorVisible="false"
                  android:longClickable="false" android:layout_weight="1"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/total15Edit" android:textColor="#ff000000" android:text="@string/zero"
                  android:gravity="center" android:textSize="14sp" android:focusable="false" android:cursorVisible="false"
                  android:longClickable="false" android:layout_weight="1"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/total20Edit" android:textColor="#ff000000" android:text="@string/zero"
                  android:gravity="center" android:textSize="14sp" android:focusable="false" android:cursorVisible="false"
                  android:longClickable="false" android:layout_weight="1"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@id/tableRow4">
        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/custom"
                  android:id="@+id/customTextView" android:textColor="#ff000000" android:gravity="center_vertical|right"
                  android:paddingBottom="5dp" android:paddingRight="5dp"/>
        <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customSeekBar" android:indeterminate="false"
                android:layout_span="2" android:progress="18" android:paddingLeft="8dp" android:paddingRight="8dp"
                android:paddingBottom="5dp" android:focusable="false" android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/temp"
                  android:id="@+id/customTipTextView" android:textColor="#ff000000" android:gravity="center_vertical|center"
                  android:paddingBottom="5dp" android:paddingLeft="5dp" android:layout_weight="1"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@id/tableRow5">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/tip"
                  android:id="@+id/tipCustomTextView" android:textColor="#ff000000" android:gravity="right"
                  android:paddingRight="5dp"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tipCustomEditText"
                  android:textColor="#ff000000" android:text="@string/zero" android:gravity="center"
                  android:textSize="14sp" android:focusable="false" android:longClickable="false" android:cursorVisible="false"
                  android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/total"
                  android:id="@+id/totalCustomTextView" android:textColor="#ff000000" android:gravity="right"
                  android:paddingRight="5dp" android:layout_weight="1"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/totalCustomEditText"
                  android:textColor="#ff000000" android:text="@string/zero" android:gravity="center"
                  android:textSize="14sp" android:focusable="false" android:longClickable="false" android:cursorVisible="false"
                  android:layout_weight="1"/>
    </TableRow>
</TableLayout>